--- a/作業(五)第八章1026/practice_5.html
+++ b/作業(五)第八章1026/practice_5.html
@@ -35,17 +35,18 @@
                 <td>D-1</td>
                 <td>D-2</td>
             </tr>    
-        </table>
+        </table>    
             <form action="#">
-                    <h1>登入系統</h1>
-                    <br>
-                    <h2>帳號</h2>
-                    <input type="text" name="account">
-                    <br>
-                    <br>
-                    <h2>密碼</h2>
-                    <input type="text" name="password">
-                    <input type="submit" value="submit">
+                <h1>登入系統</h1>
+                <br>
+                <br>
+                <label for="account">帳號:</label>
+                <input type="text"  id="account" placeholder="請輸入帳號" name="account">
+                <br>
+                <br>
+                <label for="passeword">密碼:</label>
+                <input type="text" id="passeword" placeholder="請輸入密碼" name="passeword">
+                <input type="submit" value="submit">
             </form>
     </div>
 </body>
