update radio & checkbox

--- a/作業(五)第八章1026/practice_5.html
+++ b/作業(五)第八章1026/practice_5.html
@@ -38,14 +38,25 @@
         </table>    
             <form action="#">
                 <h1>登入系統</h1>
-                <br>
-                <br>
                 <label for="account">帳號:</label>
-                <input type="text"  id="account" placeholder="請輸入帳號" name="account">
+                <input type="text" name="accout" id="account" placeholder="輸入帳號">
                 <br>
                 <br>
                 <label for="passeword">密碼:</label>
-                <input type="text" id="passeword" placeholder="請輸入密碼" name="passeword">
+                <input type="text" name="passeword" id="passeword" placeholder="輸入密碼">
+                <br>
+                <br>
+                <h2>性別:</h2>
+                <input type="radio" name="sex" value="women">女生
+                <input type="radio" name="sex" value="men">男生
+                <br>
+                <br>
+                <h2>興趣:</h2>
+                <input type="checkbox" name="hobby" value="music">音樂
+                <input type="checkbox" name="hobby" value="youtube">影片
+                <input type="checkbox" name="hobby" value="running">跑步
+                <br>
+                <br>
                 <input type="submit" value="submit">
             </form>
     </div>
