--- a/作業(五)第八章1026/practice_5.html
+++ b/作業(五)第八章1026/practice_5.html
@@ -39,7 +39,7 @@
             <form action="#">
                 <h1>登入系統</h1>
                 <label for="account">帳號:</label>
-                <input type="text" name="accout" id="account" placeholder="輸入帳號">
+                <input type="text" name="accout"  id="account" placeholder="輸入帳號">
                 <br>
                 <br>
                 <label for="passeword">密碼:</label>
@@ -57,7 +57,19 @@
                 <input type="checkbox" name="hobby" value="running">跑步
                 <br>
                 <br>
-                <input type="submit" value="submit">
+                <label for="birth">生日:</label>
+                <select name="birth" id="birth">
+                    <option value="1990">1990</option>
+                    <option value="1991">1991</option>
+                </select>
+                <br>
+                <br>
+                <h2>建議</h2>
+                <textarea cols="30" rows="10"></textarea>
+                <br>
+                <br>
+                <input type="button" value="submit 1">
+                <input type="submit" value="submit 2">
             </form>
     </div>
 </body>
