--- a/作業(五)第八章1026/practice_5.html
+++ b/作業(五)第八章1026/practice_5.html
@@ -42,8 +42,8 @@
                 <input type="text" name="accout"  id="account" placeholder="輸入帳號">
                 <br>
                 <br>
-                <label for="passeword">密碼:</label>
-                <input type="text" name="passeword" id="passeword" placeholder="輸入密碼">
+                <label for="password">密碼:</label>
+                <input type="text" name="password" id="password" placeholder="輸入密碼">
                 <br>
                 <br>
                 <h2>性別:</h2>
