--- a/作業(六)第八章-2-1028/practice_6.html
+++ b/作業(六)第八章-2-1028/practice_6.html
@@ -10,8 +10,8 @@
 <body>
     <div class="wrap">
         <form action="#">
-            <label for="passeword">帳號:</label>
-            <input type="text" id="passeword">
+            <label for="password">密碼:</label>
+            <input type="text" id="password">
             <br>
             <br>
             <input type="button" value="按鈕" class="btn">
